--- a/css/main.css
+++ b/css/main.css
@@ -538,7 +538,77 @@ footer {
   }
 }
 
-@media screen and (max-width: 992px){
 
+@media screen and (max-width: 992px){
+    
+  header{
+    width: 100%;
+    height: 32px;
+    padding-left: 3%;
+  }
+  .left_header_text{
+    font-size: 110%;
+  }
+  .right_header_text{
+    font-size: 110%;
+  }
+
+  .home_page{
+    height: 60vh;
+  }
+  .home_page::before{
+    height: 60vh;
+  }
+  .homepage_text_heading{
+    font-size: 230%;
+    top: 19%;
+    left: 19%;
+  }
+  .homepage_sub_text{
+    top: 20%;
+    left: 19%;
+  }
+  .button{
+    left: 19%;
+    top: 23%;
+    font-size: 100%;
+    padding: 6px 14px;
+    height: 2.7rem;
+  }
+
+  .cardview_container{
+    width: 800px;
+    height: 430px;
+    margin: 1.2rem auto;
+    top: -70px;
+    margin-bottom: -2rem;
+  }
+
+  .grid-container{
+    height: 390px;
+    width: 100%;
+  }
+  #wel_img> img{
+    height: 390px;
+    width: 100%;
+    content: url(/images/interior_design3.jpg);
+  }
+  #wel_txt{
+    width: 95%;
+    text-align:justify;
+    padding: 6px;
+  }
+  #wel_txt> h1{
+    font-size: 170%;
+    padding-left: 10px;
+  }
+  #wel_txt>button{
+    padding: 5px 3px;
+    margin-left: 15px;
+    font-size: 100%;
+    width: 40%;
+    height: 10%;
+  }
 }
+  
   
